# shifupool

./: Dockerfile  LICENSE  build.sh  docker-compose.yml  entrypoint.sh  readme.md
c++/: meson.build
c++/src/: meson.build
c++/src/core/: block.cpp  block.hpp  crypto.cpp  crypto.hpp  header_chain.cpp  helpers.cpp  transaction.cpp
c++/src/miningproblem/: main.cpp
c++/subprojects/: .gitignore
shifupool/: .gitignore  README.md  mix.exs  stratum-protocol.md
shifupool/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
shifupool/draft/: test.exs
shifupool/lib/: bmbpool.ex  bmbpool_web.ex
shifupool/lib/bmbpool/: application.ex  truncated_log.ex  work.ex
shifupool/lib/bmbpool/api_data/: history_chart.ex
shifupool/lib/bmbpool/backend/: backend.ex
shifupool/lib/bmbpool/nodes/: nodes.ex
shifupool/lib/bmbpool/payout/: payout.ex
shifupool/lib/bmbpool/poolstate/: poolstate.ex
shifupool/lib/bmbpool/users/: acceptor.ex  ip_ban.ex  ip_registry.ex  ip_wallet.ex  json_messages.ex  rate_limiter.ex  system.ex  worker_connection.ex
shifupool/lib/bmbpool_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
shifupool/lib/bmbpool_web/controllers/: api_controller.ex  local_controller.ex  page_controller.ex
shifupool/lib/bmbpool_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
shifupool/test/bmbpool_web/controllers/: page_controller_test.exs
shifupool/test/bmbpool_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
shifupool/test/support/: channel_case.ex  conn_case.ex
(+25 files in other folders)
